# Houdini-Toolbox

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylint.rc  CMakeLists.txt  LICENSE  Makefile  Makefile.gnu  README  README.md  ROP_Script.h  SOP_IdAttribCopy.C  SOP_IdAttribCopy.h  SOP_IdBlast.C  SOP_PointsFromVoxels.C  SOP_PointsFromVoxels.h  SOP_PrimCentroid.C  SOP_PrimCentroid.h  SOP_PrimGroupCentroid.C  SOP_PrimGroupCentroid.h  houdini-toolbox.json  inline.py  mypy.ini  objects_hou.inv  package.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt
ROP/ROP_Script/: Makefile  ROP_Script.C  ROP_Script.h  rop_script.shelf  script.txt
SOP/: Makefile
SOP/SOP_DopImpactPoints/: Makefile  SOP_DopImpactPoints.C  SOP_DopImpactPoints.h  dopimpactpoints.txt
SOP/SOP_IdAttribCopy/: SOP_IdAttribCopy.C  SOP_IdAttribCopy.h  idattribcopy.txt  sop_idattribcopy.shelf
SOP/SOP_IdBlast/: Makefile  SOP_IdBlast.C  SOP_IdBlast.h
SOP/SOP_PointsFromVoxels/: SOP_PointsFromVoxels.C  SOP_PointsFromVoxels.h  pointsfromvoxels.txt  sop_pointsfromvoxels.shelf
SOP/SOP_PrimCentroid/: SOP_PrimCentroid.C  SOP_PrimCentroid.h  primcentroid.txt  sop_primcentroid.shelf
SOP/SOP_PrimGroupCentroid/: SOP_PrimGroupCentroid.C  SOP_PrimGroupCentroid.h  primgroupcentroid.txt  sop_primgroupcentroid.shelf
SOP/SOP_Varmap/: Makefile  SOP_Varmap.C  SOP_Varmap.h  sop_varmap.shelf
SOP_IdAttribCopy/: SOP_IdAttribCopy.C
SOP_PrimGroupCentroid/: primgroupcentroid.txt
config/: gcs.json
houdini/: HotkeyOverrides  MainMenuCommon.xml  NetworkViewMenu.xml  OPmenu.xml  PARMmenu.xml
houdini/config/: gcs.json
houdini/config/NodeShapes/: README  classic.json  classic_rounded.json  data.json  decision.json  merge.json  rect.json  squared.json
houdini/config/aovs/: debug.json  definitions.json  diagnostic.json
houdini/config/colors/: gcs.json
houdini/config/styles/: gcs.json
houdini/help/aov_manager/: aov_dialog.txt  aov_manager.txt  group_dialog.txt
houdini/otls/: CMakeLists.txt  Driver-wedge.1.otl  Sop-cppwrangle.1.otl  Sop-gnomon.1.otl  Sop-ngon.1.otl  Sop-tangent.1.otl
houdini/otls/Sop-cppwrangle.1.otl/: INDEX__SECTION  Sections.list
houdini/pyfilter/: customPyFilter.py  ht-pyfilter.py  operations.json
houdini/python2.7libs/: nodegraphhooks.py  pythonrc.py
houdini/python3.7libs/: nodegraphhooks.py  pythonrc.py
houdini/python3.9libs/: nodegraphhooks.py  pythonrc.py
houdini/python_panels/: aov_manager.pypanel  paste.pypanel
houdini/scripts/: 456.py  OnCreated.py  OnDeleted.py  OnInputChanged.py  OnInstall.py  OnLoaded.py  OnNameChanged.py  OnUninstall.py  OnUpdated.py  PostLastDelete.py  PreFirstCreate.py  SyncNodeVersion.py  afterscenesave.py  beforescenesave.py  externaldragdrop.py
houdini/scripts/python/: pythonrc.py
houdini/soho/: IFDuserhooks.py
houdini/soho/parameters/: HT.ds  SOHOparameters
houdini/soho/planes/: debug.json
houdini/toolbar/: tool_copy_items.shelf  tool_generate_help_card.shelf  tool_paste_items.shelf
icons/: CMakeLists.txt  icons.py  icons.qrc  install_icons
plugins/: CMakeLists.txt  Makefile  Makefile.gnu  README.md
plugins/OPUI/OPUI_GenericImageBadge/: CMakeLists.txt  OPUI_GenericImageBadge.C  OPUI_GenericImageBadge.h
plugins/OPUI/OPUI_GenericTextBadge/: CMakeLists.txt  OPUI_GenericTextBadge.C  OPUI_GenericTextBadge.h
plugins/PY/PY_generic_image_badge/: CMakeLists.txt  PY_generic_image_badge.C
plugins/PY/PY_generic_text_badge/: CMakeLists.txt  PY_generic_text_badge.C
plugins/ROP/: Makefile
plugins/ROP/ROP_Script/: CMakeLists.txt  Makefile  ROP_Script.C  ROP_Script.C.in  ROP_Script.h  help.txt  script.txt  tool.shelf
plugins/SOP/: Makefile
plugins/SOP/SOP_DopImpactPoints/: CMakeLists.txt  Makefile  SOP_DopImpactPoints.C  SOP_DopImpactPoints.C.in  SOP_DopImpactPoints.h  help.txt  sop_dopimpactpoints.shelf  tool.shelf
plugins/SOP/SOP_IdAttribCopy/: Makefile  SOP_IdAttribCopy.h
plugins/SOP/SOP_IdBlast/: Makefile  SOP_IdBlast.h  idblast.txt
plugins/SOP/SOP_PointsFromVoxels/: CMakeLists.txt  Makefile  SOP_PointsFromVoxels.C  SOP_PointsFromVoxels.C.in  SOP_PointsFromVoxels.h  help.txt  pointsfromvoxels.txt  sop_pointsfromvoxels.shelf  tool.shelf
plugins/SOP/SOP_PrimCentroid/: CMakeLists.txt  Makefile  SOP_PrimCentroid.C  SOP_PrimCentroid.C.in  SOP_PrimCentroid.h  help.txt  primcentroid.txt  tool.shelf
plugins/SOP/SOP_PrimGroupCentroid/: CMakeLists.txt  Makefile  SOP_PrimGroupCentroid.C  SOP_PrimGroupCentroid.C.in  SOP_PrimGroupCentroid.h  help.txt  tool.shelf
plugins/SOP/SOP_Varmap/: Makefile  sop_varmap.shelf  varmap.txt
plugins/cmake/: HoudiniToolboxPlugins.cmake
python/: customPyFilter.py  inline.py  test_inline.hip  test_inline.py
python/houdini_toolbox/: utils.py
python/houdini_toolbox/events/: __init__.py  callbacks.py  event.py  group.py  item.py  manager.py  stats.py  types.py
python/houdini_toolbox/geometry/: pointcloud.py
python/houdini_toolbox/inline/: api.py  lib.py  utils.py
python/houdini_toolbox/logging/: adapters.py  config.json  config.py  shellio.py
python/houdini_toolbox/machinery/: package.py
python/ht/: argument.py  inline.py  logger.py  utils.py
python/tests/: test_inline.hip  test_inline.py
scripts/: 456.py  OnCreated.py  OnNameChanged.py
soho/: IFDuserhooks.py
soho/planes/: default.json  definitions.json
tests/: conftest.py  test_logger.py  test_utils.py
tests/events/: test_callbacks.py  test_event.py  test_group.py  test_item.py  test_manager.py  test_stats.py
tests/geometry/: test_pointcloud.py
tests/inline/: test_api.py  test_api_integration.py  test_inline.hip  test_inline.hipnc  test_inline.py  test_utils.py  test_utils_integration.py
tests/loggers/: test_shellio.py
tests/logging/: test_adapters.py  test_config.py  test_shellio.py
tests/nodes/: test_badges.py  test_parameters.py
tests/pyfilter/: test_manager.py  test_property.py  test_utils.py
tests/python/: conftest.py  test_utils.py
tests/shelf_tools/: test_tool_copy_items.py  test_tool_paste_items.py
tests/sohohooks/: test_manager.py
tests/ui/: conftest.py  test_nodegraph.py  test_nodegraphhooks.py
(+215 files in other folders)
